# ANN-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  doodle_classifier.txt  doodle_classifier_omp.txt  doodle_classify.c  doodle_simple.c  doodle_train  doodle_train.c  matrix.c  matrix_mpi.c  matrix_threaded.c  model  model.c  model_relu  model_relu.c  model_softmax  model_softmax.c  readme.md  temp.c  test.c  util.c  xor.txt  xor_sigmoid.c
builds/: doodle_train  test
include/: array.h  matrix.h  matrix_omp.h  matrix_threaded.h  model.h  model_relu.h  model_softmax.h  model_softmax_omp.h  model_softmax_threaded.h  pgm.h  sigmoid.h  softmax.h  softmax_omp.h  softmax_threaded.h
src/: digit_classifier.c  doodle_classify.c  doodle_simple.c  doodle_train.c  doodle_train_omp.c  doodle_train_threaded.c  xor_sigmoid.c
test/: filter_dataset.py  generate_xor.py  get_doodle_dataset.py  omp_testing.py  script.py  temp.c  test.c
util/: absolute.c  array.c  dir.c  pgm.c  relu.c  softmax.c
